added a gitignore file + fix all dependencie errors

--- a/development/index.html
+++ b/development/index.html
@@ -22,6 +22,12 @@
 
 
 	<!-- SCRIPTS /////////////////////////////////////////////////////////////////// -->
+	<noscript>
+
+		This site requires javascript to run, which is not enabled in your browser. 
+		Here are instructions on <a href="http://www.enable-javascript.com/" target="_blank">how to enable javaScript</a> in your browser.
+
+	</noscript>
 
 
 	<script data-main="js/config" src="js/libs/require-2.1.9.min.js"></script>
